Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-ui-service
  labels:
    app: react-ui
spec:
  selector:
    app: react-ui
  ports:
    - protocol: TCP
      port: 80 # Service ka port
      targetPort: 80 # Container ka port
  type: ClusterIP
