Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app: react-ui
spec:
  rules:
  - host: your-domain.com # Yahan apna domain name daalein
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-ui-service
            port:
              number: 80
